<resources>
    <string name="logout">Log Out</string>
    <string name="choose_comfort">Sort by comfort</string>
    <string name="choose_freedom">Sort by freedom</string>
    <string name="choose_price">Sort by room price</string>
    <string name="low">Low First</string>
    <string name="high">High First</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share_room_with_a_course_mate">Share a room with a course mate?</string>
    <string name="desired_room_type">Choose a room type</string>
    <string name="any">Any</string>
    <string name="no_available_options">No Available Options.</string>
    <string name="freedom">Freedom</string>
    <string name="comfort">Comfort</string>
    <string name="Price">Price</string>
    <string name="course_mate">Course Mate</string>
    <string name="type">Type</string>
    <string name="make_changes_where_necessary">To finish setting up your account, please fill in the details below and make changes where necessary.</string>
    <string name="make_final_payment">Make Final Payment</string>
    <string name="final_payment_deadline">Payment Deadline:</string>
    <string name="notice">Notice</string>
    <string name="add_hostel">Add Hostel</string>
    <string name="login_info">Login Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage">Manage</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="cloudinary_secret">OyYpZFB2idENG6jxKJYXm-7hR4c</string>
    <string name="cloudinary_key">438819128153317</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXdhdGgtYWJkYXQiLCJhIjoiY2trdGxiM2NxMHBoMjJvcGJqeWRyMXUyNSJ9.z_6cHig15AAdBiJLoooFxw</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="tripple_room_booking_fee">Tripple Room Booking Fee</string>
    <string name="tripple_room_price">Tripple Room Price</string>
    <string name="double_room_booking_fee">Double Room Booking Fee</string>
    <string name="double_room_price">Double Room Price</string>
    <string name="single_room_booking_fee">Single Room Booking Fee</string>
    <string name="single_room_price">Single Room Price</string>
    <string name="quadripple_room">Quadripple</string>
    <string name="tripple_room">Tripple</string>
    <string name="double_room">Double</string>
    <string name="single_room">Single</string>
    <string name="no_of_rooms_on_level">Number of rooms on level</string>
    <string name="prefix_of_level">Prefix of level (eg. A for Level A)</string>
    <string name="level_five">Level 5</string>
    <string name="level_four">Level 4</string>
    <string name="level_three">Level 3</string>
    <string name="level_two">Level 2</string>
    <string name="level_one">Level 1</string>
    <string name="one">1</string>
    <string name="levels_plus">&#43;</string>
    <string name="levels_minus">&#8211;</string>
    <string name="no_levels">No. of levels:</string>
    <string name="hostel_building_description">Building Description</string>
    <string name="capture_location">Capture Location</string>
    <string name="description_of_hostel">Description of Hostel</string>
    <string name="name_of_hostel">Name of Hostel</string>
    <string name="general_description">General Description</string>
    <string name="hostel_ratings">Hostel Ratings</string>
    <string name="selected_for_you">Rooms Selected For You</string>
    <string name="hostel_description">Student Accommodation for Makerere University Business School (MUBS), Victoria University Students. We are located at Plot 114&#8211;122 New Portbell Road, Bunyonyi Drive Nakawa, Kampala Uganda.</string>
    <string name="full_amount_text">Full Amount:</string>
    <string name="room_type_text">Room Type:</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="booking_fee">Booking Fee:</string>
    <string name="room_type_name">Room A</string>
    <string name="book">Book</string>
    <string name="unavailable">Unavailable</string>
    <string name="details">Details</string>
    <string name="hostel_name">Akamwesi Hostels</string>
    <string name="comfort_rating_text">Comfort:</string>
    <string name="distance_rating_text">Distance:</string>
    <string name="price_rating_text">Price:</string>
    <string name="freedom_rating_text">Freedom:</string>
    <string name="hostels">Hostels</string>
    <string name="search_hostels">Search Hostels</string>
    <string name="app_name">Hostel Online</string>
    <string name="icon_alt_text">Hostel Online Logo</string>
    <string name="identifier">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="no_account_start">Don\'t have a</string>
    <string name="no_account_end">account?</string>
    <string name="no_account_sign_up">Sign up</string>
    <string name="sign_up_fill_in_details">Fill in the details below to create an account.</string>
    <string name="newsign_up_fill_in_details">Fill in new details to update Info</string>
    <string name="textview">TextView</string>
    <string name="please_clean_your_toilets">please clean your toilets</string>
    <string name="title_activity_manager_notifications">ManagerNotifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>