<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sign_in_with_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/facebook_button"
        android:fontFamily="@font/segoeui"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no_account_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_google" />

    <Button
        android:id="@+id/sign_in_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/google_button"
        android:fontFamily="@font/segoeui"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_or" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/button_light_style"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/segoeui"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_container" />

    <ImageView
        android:id="@+id/sign_in_logo"
        android:layout_width="61dp"
        android:layout_height="72dp"
        android:contentDescription="@string/icon_alt_text"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_mine" />

    <TextView
        android:id="@+id/sign_in_logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoescript"
        android:text="@string/app_name"
        android:textColor="#008888"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_identifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/sign_in_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/or"
        android:textColor="@color/uigray"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/no_account_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/no_account_start"
        android:textColor="@color/uigray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no_account_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/no_account_app_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_facebook" />

    <TextView
        android:id="@+id/no_account_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/app_name"
        android:textColor="@color/uigray"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/no_account_start"
        app:layout_constraintEnd_toStartOf="@+id/no_account_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no_account_start"
        tools:fontFamily="@font/segoeuii" />

    <TextView
        android:id="@+id/no_account_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/no_account_end"
        android:textColor="@color/uigray"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/no_account_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_account_app_title" />

    <TextView
        android:id="@+id/no_account_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:onClick="startSignUpActivity"
        android:text="@string/no_account_sign_up"
        android:textColor="@color/uicyan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_account_start" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/segoeui"
        android:textSize="20sp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_identifier"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/uigray"
        app:placeholderTextColor="@color/uigray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/field_background"
            android:ems="10"
            android:fontFamily="@font/segoeui"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_identifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/segoeui"
        android:inputType="text"
        android:textColor="#707070"
        android:textSize="20sp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_password_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_logo_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field_background"
            android:fontFamily="@font/segoeui"
            android:hint="@string/identifier"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:textColor="#707070"
            android:textColorHint="@color/uigray"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>