<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/room_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/rooma" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_background"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout3">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/app_name"
            android:onClick="hideListDetails"
            app:layout_constraintBottom_toBottomOf="@+id/room_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/room_label"
            app:srcCompat="@drawable/arrow_down" />

        <TextView
            android:id="@+id/room_label"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:text="@string/room_type_name"
            android:textColor="@color/uicyan"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/room_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_label">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbackground"
                android:fontFamily="@font/segoeui"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/book"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/booking_fee_text" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/price_rating_text"
                android:textColor="@color/uigray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textColor="@color/uigray"
                app:layout_constraintBaseline_toBaselineOf="@+id/price_text"
                app:layout_constraintStart_toStartOf="@+id/room_type" />

            <TextView
                android:id="@+id/room_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/room_type_text"
                android:textColor="@color/uigray"
                app:layout_constraintStart_toStartOf="@id/price_text"
                app:layout_constraintTop_toBottomOf="@id/price_text" />

            <TextView
                android:id="@+id/room_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textColor="@color/uigray"
                app:layout_constraintBaseline_toBaselineOf="@id/room_type_text"
                app:layout_constraintStart_toStartOf="@+id/booking_fee" />

            <TextView
                android:id="@+id/booking_fee_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/booking_fee"
                android:textColor="@color/uigray"
                app:layout_constraintStart_toStartOf="@+id/price_text"
                app:layout_constraintTop_toBottomOf="@id/room_type_text" />

            <TextView
                android:id="@+id/booking_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/unavailable"
                android:textColor="@color/uigray"
                app:layout_constraintBaseline_toBaselineOf="@+id/booking_fee_text"
                app:layout_constraintStart_toEndOf="@+id/booking_fee_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>